--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,95 @@
-img {
-  width: 50%;
+body, html {
+  width: 100%;
+  height: 100%;
+}
+
+.logo-img {
+  width: 30%;
+  margin-top: 80px;
 }
 
 .data-image {
   width: 5%;
+}
+
+.landing-page {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.landing-page-buttons {
+  width: 100%;
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.landing-page-buttons a {
+  width: 30%;
+  text-decoration: none;
+  background-color: rgb(57, 83, 14);
+  font-size: 2em;
+  color: white;
+  height: 80px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px;
+}
+
+.login-screen {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.login-form {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.login-form p {
+  margin: 0;
+  width: 30%;
+  text-align: left;
+}
+
+.login-form input {
+  margin-bottom: 20px;
+  width: 30%;
+  height: 50px;
+  font-size: 1.3em;
+}
+
+.login-form button {
+  width: 20%;
+  height: 50px;
+  -webkit-appearance: none;
+  background-color: rgb(57, 83, 14);
+  color: white;
+  font-size: 1.3em;
+}
+
+.register {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.register p {
+  margin: 0;
 }
